--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/navigation.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/navigation.css
@@ -111,9 +111,14 @@
 .nav_column .item li.nav_selected {
     background-color: #E3E3E3;
     padding-top:inherit;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
+    padding-top: 10px;
 }
-
+.order-approval-cls {
+	position: relative;
+	float: left;
+	top: -6px;
+}
 .facet_block li{
 	padding-left: 3px;
 }
