approval and rejection comments changes implementation.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
@@ -195,5 +195,11 @@
 
 .orderList .orderListTable tbody td p{text-align:left;}
 
+table.orderListApprovTbl-cls{width:100%;}
+table.orderListApprovTbl-cls td:last-child p{width:105px;word-wrap:break-word;}
+.obShippinFixCls{
+	position:relative;
+	left:41px;
+}
 
 
