product list fix

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/productList.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/productList.css
@@ -83,6 +83,12 @@
 .productListItem button.pickupInStoreButton, .productListItem button.addToCartButton {
 	height: 27px;
 }
+.productList .productListItem .head
+{
+font-size: 1.1em !important;
+font-weight: bold !important;
+}
+
 
 
 
