--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
@@ -355,3 +355,6 @@ width: 300px;
 #b2BCustomerForm .companyRoles-cls .control-group.error .help-inline{
 	margin: 20px 0;
 }
+#placeOrderForm2 .control-label,#placeOrderForm .control-label, #placeOrderForm1 .control-label{
+	padding-right: 0px !important; 
+}
