UI Fix and SIT Observation Fixes. and HPQC defect fix for B2BUser cron job

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/forms.css
@@ -359,3 +359,7 @@ width: 300px;
 	padding-right: 0px !important; 
     width : 349px !important;
 }
+
+.control-group select.lang-selector{
+	width: 100px !important;
+}
