css issue fix: mini cart, manage users, product height

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/siteSearch.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/siteSearch.css
@@ -115,3 +115,7 @@
 	float:right;
 	font-weight:bold  !important;
 }
+
+/* new css */
+
+.ui-autocomplete .ui-menu-item .thumb img{max-height:75px;}
