--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/account.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/account.css
@@ -266,3 +266,9 @@ div.delivery_stages .headline{
 .b2BCustomerFormList .control-group select{
 	width: 100% !important;
 }
+
+
+/* new css */
+.accountContentPane .headline{color:#0b4f04;}
+
+
