order history page , approver comments center alignment

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/order.css
@@ -201,5 +201,7 @@ table.orderListApprovTbl-cls td:last-child p{width:105px;word-wrap:break-word;}
 	position:relative;
 	left:41px;
 }
-
+.orderList .orderListTable tbody td p {
+	  text-align: center;
+}
 
