--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/blueprint/screen.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/blueprint/screen.css
@@ -43,7 +43,7 @@ p .right {margin:1.5em 0 1.5em 1.5em;padding:0;}
 a:focus, a:hover {color:#495862;}
 a {color:#06c;text-decoration:underline;}
 blockquote {margin:1.5em;color:#666;font-style:italic;}
-strong, dfn {font-weight:bold;}
+strong, dfn {font-weight:bold;font-size: large;}
 em, dfn {font-style:italic;}
 sup, sub {line-height:0;}
 abbr, acronym {border-bottom:1px dotted #666;}
