--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderInProcessBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderInProcessBody.vm
@@ -71,9 +71,9 @@
 															<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.quantity}</b></font></td>
 															<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.itemPrice}</b></font></td>
 															<td width="16%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.total}</b></font></td>
-															<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>Adjusted Quantity</b></font></td>
-															<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>Adjusted Item Price</b></font></td>
-															<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>Adjusted Total Price</b></font></td>
+															<!--<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>Adjusted Quantity</b></font></td>-->
+															<!--<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>Adjusted Item Price</b></font></td>-->
+															<!--<td width="17%" height="40px"><font color="#333" size="2" face="Arial, Helvetica, sans-serif"><b>Adjusted Total Price</b></font></td>-->
 														</tr>
 														#foreach( $entry in ${ctx.orderData.entries} )
 														
@@ -119,9 +119,9 @@
 															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.quantity</font></p></td>
 															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.basePrice.formattedValue</font></p></td> 
 															<td valign="top"><p><font color="#414a4f" size="3" face="Arial, Helvetica, sans-serif"><b>#if($entry.totalPrice.value > 0) $entry.totalPrice.formattedValue #else ${ctx.messages.free} #end</b></font></p></td> 
-															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!entry.adjustedQty) $entry.adjustedQty #else 0 #end </font></p></td>
-															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!entry.adjustedLinePrice.formattedValue) $entry.adjustedLinePrice.formattedValue #else 0 #end </font></p></td>
-															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!{ctx.orderData.adjustedTotalPrice.formattedValue}) ${ctx.orderData.adjustedTotalPrice.formattedValue} #else 0 #end </font></p></td>
+															<!--<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!entry.adjustedQty) $entry.adjustedQty #else 0 #end </font></p></td>-->
+															<!--<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!entry.adjustedLinePrice.formattedValue) $entry.adjustedLinePrice.formattedValue #else 0 #end </font></p></td>-->
+															<!--<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!{ctx.orderData.adjustedTotalPrice.formattedValue}) ${ctx.orderData.adjustedTotalPrice.formattedValue} #else 0 #end </font></p></td>-->
 														</tr>
 														#end
 													</table>
@@ -140,9 +140,10 @@
 										#if (${ctx.consignment.trackingID})
 											<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('track', ${ctx.consignment.trackingID})}</font></p>
 										#end
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$paragraphContactUs</font></p>
+										<!--<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$paragraphContactUs</font></p>-->
 										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.complimentaryClosing}</font></p>
 										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.signature}</font></p>
+										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.note}</font></p>
 									</td>
 								</tr>
 								<tr>
