--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderCancelledBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderCancelledBody.vm
@@ -59,7 +59,7 @@
 									<td align="left" valign="top">
 										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.getMessage('salutation', ${ctx.orderData.user.name})}</b>,</font></p>
 										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('thankYouForOrder',"#genHtmlLinkStartTag($orderInfoUrl)","#genHtmlBoldFont(${ctx.orderData.erpOrderNumber})", "#genHtmlLinkEndTag()")}</font></p>
-										<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('shippedItems', "#genHtmlLinkStartTag($orderInfoUrl)", "#genHtmlBoldFont(${ctx.orderData.erpOrderNumber})", "#genHtmlLinkEndTag()")}</font></p>
+										<!--<p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.messages.getMessage('shippedItems', "#genHtmlLinkStartTag($orderInfoUrl)", "#genHtmlBoldFont(${ctx.orderData.erpOrderNumber})", "#genHtmlLinkEndTag()")}</font></p>-->
 										<br/>
 										<!--products start-->
 										<table width="100%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0" class="products">
