Fixed the cart button size

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/miniCart.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/miniCart.css
@@ -11,8 +11,9 @@
 .miniCart > a .count{
 	background:#464646;
 	color:#fff;
-	width:26px;
+	width:auto;
 	margin:0 5px;
+	padding:0 5px;
 	font-size:0.833em;
 	display: inline-block;
 	text-align:center;
