--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderInProcessBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderInProcessBody.vm
@@ -118,7 +118,7 @@
 															</td>
 															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.quantity</font></p></td>
 															<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">$entry.basePrice.formattedValue</font></p></td> 
-															<td valign="top"><p><font color="#414a4f" size="3" face="Arial, Helvetica, sans-serif"><b>#if($entry.totalPrice.value > 0) $entry.totalPrice.formattedValue #else ${ctx.messages.free} #end</b></font></p></td> 
+															<td valign="top"><p><font color="#414a4f" size="3" face="Arial, Helvetica, sans-serif">#if($entry.totalPrice.value > 0) $entry.totalPrice.formattedValue #else ${ctx.messages.free} #end</font></p></td> 
 															<!--<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!entry.adjustedQty) $entry.adjustedQty #else 0 #end </font></p></td>-->
 															<!--<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!entry.adjustedLinePrice.formattedValue) $entry.adjustedLinePrice.formattedValue #else 0 #end </font></p></td>-->
 															<!--<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">#if ($!{ctx.orderData.adjustedTotalPrice.formattedValue}) ${ctx.orderData.adjustedTotalPrice.formattedValue} #else 0 #end </font></p></td>-->
