code fixes  For: "Order Block - happy scenario working fine. But breaks if we follow steps below: 1. Add a product to Cart and see Order Blocked grayed out. 2. Click on Continue shopping and add more products. 3. Remove one of the products. ORDER BLOCKED is now green and clickable. 4. It starts functioning as a CHECKOUT button and order can be placed till the end." Can we display a one line message in the cart saying "Your account is blocked and you cannot place an order right now. Please contact customer service"

--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/theme-green/css/changes.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/theme-green/css/changes.css
@@ -90,6 +90,14 @@ button.checkoutButton {
 	margin-top: 20px;
 }
 
+
+button.checkoutButtonRed {
+	font-size: 140%;
+	margin-top: 20px;
+	background: none repeat scroll 0 0 red;
+    border-color: red;
+}
+
 #savedPaymentList .paymentEntry {
 	min-height: 188px;
 }
