--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderConfirmationSubject.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-orderConfirmationSubject.vm
@@ -1,1 +1,1 @@
-﻿${ctx.messages.getMessage('emailSubject', ${ctx.order.code})}
+﻿${ctx.messages.getMessage('emailSubject', ${ctx.order.erpOrderNumber})}
