--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-energizerOrderCreatedBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-energizerOrderCreatedBody.vm
@@ -1,4 +1,4 @@
-## messageSource=classpath:/energizercore/messages/email-energizerOrderCreation_$lang.properties
+## messageSource=classpath:/energizercore/messages/email-energizerOrderCreation_en.properties
 #macro( genHtmlBoldFont $text )
 <font color="#414a4f" size="2" face="Arial, Helvetica, sans-serif"><b>$text</b></font>
 #end
