fixed issues : 1->"ContactUs link" fixed in 18 *body.vm files 2->ExcelUploadPageController.java filed updated to accept('text','general','number') cell types. 3->In "EnergizerGenericEmailContext.java" class url encoding attribute issue is fixed,Now the "baseurl" is not containing any url encoding parameters like 'household or personalcare' . 4->Shipping details fixed in order history page-[containerid,vesselnumber].

--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-energizerOrderInProcessBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-energizerOrderInProcessBody.vm
@@ -218,7 +218,7 @@
 								</tr>
 								<tr>
 									<td height="30" align="right" valign="middle" bgcolor="#000000">
-										<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.baseUrl}"><font color="#FFFFFF">${ctx.messages.help}</font></a> | <a href="${ctx.messages.contactUsPage}"><font color="#FFFFFF">${ctx.messages.contactUs}</font></a> | <a href="${ctx.baseUrl}"><font color="#FFFFFF">${ctx.messages.termsAndCondition}</font></a> &nbsp;&nbsp;</font>
+										<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.baseUrl}"><font color="#FFFFFF">${ctx.messages.help}</font></a> | <a href="${ctx.baseUrl}/ContactUs"><font color="#FFFFFF">${ctx.messages.contactUs}</font></a> | <a href="${ctx.baseUrl}"><font color="#FFFFFF">${ctx.messages.termsAndCondition}</font></a> &nbsp;&nbsp;</font>
 									</td>
 								</tr>
 								<tr>
