--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-passwordExpiryBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-passwordExpiryBody.vm
@@ -70,7 +70,7 @@
 								</tr>
 								<tr>
 									<td height="30" align="right" valign="middle" bgcolor="#51585c">
-										<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.messages.faqUrl}"><font color="#FFFFFF">${ctx.messages.help}</font></a> | <a href="${ctx.messages.contactUsPage}"><font color="#FFFFFF">${ctx.messages.contactUs}</font></a> | <a href="${ctx.messages.termsUrl}"><font color="#FFFFFF">${ctx.messages.termsAndCondition}</font></a> &nbsp;&nbsp;</font>
+										<font color="#FFFFFF" size="2" face="Arial, Helvetica, sans-serif"><a href="${ctx.messages.faqUrl}"><font color="#FFFFFF">${ctx.messages.help}</font></a> | <a href="${ctx.baseUrl}/ContactUs"><font color="#FFFFFF">${ctx.messages.contactUs}</font></a> | <a href="${ctx.messages.termsUrl}"><font color="#FFFFFF">${ctx.messages.termsAndCondition}</font></a> &nbsp;&nbsp;</font>
 									</td>
 								</tr>
 								<tr>
