Changes have been made as per CMIR active/Inactive requirement. 1)New Class EnergizerCMIRMonitorJob.java have been added , configured in *-spring.xml and EnergizerProductService.java , EnergizerProductDAO.java and essentialdata-energizerCronjobs.impex have been updated. 2)For quick order and Excel order , changes have been made in AccountPageController.java & DefaultEnergizerExcelRowtoModelService.java . 3) for Solr part EnergizerProductCustomerMaterialDescriptionValueProvider.java & EnergizerProductB2BUnitValueProvider.java have been updated. 4)for reorder part changes have been made in reorderButton.tag, AccountPageController.java ,Energizerfacade-bean.xml & productpopulator class. 5).vm files corresponding to password Expiry/Expired. ---------------shweta----------------------------

--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-passwordExpiryBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-passwordExpiryBody.vm
@@ -1,4 +1,4 @@
-## messageSource=classpath:/energizercore/messages/email-passwordExpiry_$lang.properties
+## messageSource=classpath:/energizercore/messages/email-passwordExpiry_en.properties
 #macro(genHtmlLinkStartTag $url)
 <a href="$url"><font color="#666666">
 #end
