1->EnergizerCMIRMonitorJob.java,reader.close() is added to release the resource after job get finish. 2->EnergizerGenericEmailContext.java,"env" property is been added into context-map 3->EnergizerEmailGenerationService.java,"enviorment" added in subject of each mail. 4->headernavigationcomponent.jsp,b2bunit name added 5->*subject.vm,enviorment information populated. 6->EnergizerOrphanedProductProcessor.java,enviorment info added in email-subject 7->AbstractEnergizerCSVProcessor.java,enviorment info added in subject for mail-errors method. 8->EnergizerCustomerUsersListJob.java,updated for user-email ids 9->AccountPageController.java,updatePassword method modified. 10->UpdatePasswordForm.java,commented the validation for getCurrentpassword and checknewpassword method. 11->errorSpanField.tag,updated for displaying error in red color 12->base_en.properties,2-3 fields modified for password validation.

--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-energizerOrderCreatedSubject.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-energizerOrderCreatedSubject.vm
@@ -1,1 +1,1 @@
-${ctx.messages.getMessage('emailSubject', ${ctx.order.code})}
+(${ctx.env})${ctx.messages.getMessage('emailSubject', ${ctx.order.code})}
