--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-energizerOrderPendingSubject.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/houseHoldContentCatalog/emails/email-energizerOrderPendingSubject.vm
@@ -1,1 +1,1 @@
-${ctx.messages.getMessage('emailSubject', ${ctx.order.code})}
+(${ctx.env})${ctx.messages.getMessage('emailSubject', ${ctx.order.code})}
