1->EnergizerOfflineOrderCSVProcessor.java,try-catch added within the for loop to avoid prepare email throw exception.
2->email-enviroment set up made for both templated and non-templated emails(*subject*.vm)files also modified for same reason

3->messages/base_en.properties/es.properties modified for password reset(message) and container utilization concerns.

4->product/productDetailsPanel.tag file modified to avoid segment,group and family to be displayed on product details page.

5->cart/cartPage.jsp modified to add disclaimer for container utilization.

--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-deliverySentSubject.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-deliverySentSubject.vm
@@ -1,1 +1,1 @@
-﻿(${ctx.env})${ctx.messages.getMessage('emailSubject', ${ctx.orderData.erpOrderNumber})}
+﻿${ctx.env}${ctx.messages.getMessage('emailSubject', ${ctx.orderData.erpOrderNumber})}
