--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderCancelledSubject.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderCancelledSubject.vm
@@ -1,1 +1,1 @@
-﻿(${ctx.env})${ctx.messages.getMessage('emailSubject', ${ctx.orderData.erpOrderNumber})}
+﻿${ctx.env}${ctx.messages.getMessage('emailSubject', ${ctx.orderData.erpOrderNumber})}
