--- a/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/container.css
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/_ui/desktop/common/css/container.css
@@ -23,6 +23,6 @@ body, table {font:10pt verdana;}
 .cnt_utlwilfill_cls{position:relative;top:50px;z-index:101;text-align:center;}
 .fixthis_row_cls{padding-bottom:45px;}
 
-.cnt_utl_cls{
+/*.cnt_utl_cls{
 	text-transform: uppercase;
-}
+}*/
